--- a/package.json
+++ b/package.json
@@ -21,13 +21,28 @@
         "@angular/platform-browser-dynamic": "~10.0.0",
         "@angular/router": "~10.0.0",
         "@capacitor/core": "2.4.2",
-        "@ionic-native/core": "^5.0.0",
+        "@ionic-native/camera": "^5.30.0",
+        "@ionic-native/core": "^5.22.0-beta-1",
+        "@ionic-native/geolocation": "^5.30.0",
+        "@ionic-native/google-maps": "^5.27.0-beta-20200630",
         "@ionic-native/keyboard": "^5.29.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
+        "cordova-android": "^6.2.3",
+        "cordova-androidx-build": "^1.0.4",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-geolocation": "^4.1.0",
+        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
+        "cordova-plugin-ionic-webview": "^4.0.0",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "firebase": "^8.0.0",
+        "master": "0.0.14",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.3"
@@ -59,7 +74,19 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-ionic-keyboard": {}
-        }
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-googlemaps": {},
+            "cordova-plugin-camera": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "android",
+            "browser"
+        ]
     }
 }
